--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="./images/favicon-32x32.png"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Huddle Landing Page</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -17,6 +17,39 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="navbar">
+      <img src="./images/logo.svg" alt="logo" class="main-logo" />
+    </div>
+    <div class="header">
+      <div class="left-container">
+        <div class="head-img">
+          <img
+            src="./images/illustration-mockups.svg"
+            alt="Mockups"
+            class="main-img"
+          />
+        </div>
+      </div>
+      <div class="right-container">
+        <h1 class="right-title">Build The Community Your Fans Will Love</h1>
+        <p class="right-description">
+          Huddle re-imagines the way we build communities. You have a voice,but
+          so does your audience.Create connections with your users as you engage
+          in genuine discussion.
+        </p>
+        <button class="btn right-btn">Register</button>
+      </div>
+    </div>
+    <div class="footer">
+      <ul class="list-media">
+        <li class="list-social"><i class="fa-brands fa-facebook-f"></i></li>
+        <li class="list-social"><i class="fa-brands fa-twitter"></i></li>
+        <li class="list-social"><i class="fa-brands fa-instagram"></i></li>
+      </ul>
+    </div>
+  </body>
 </html>
